tests/parser/should_fail/T8258NoGADTs.hs
{-# LANGUAGE Haskell2010 #-}
module T8258NoGADTs where

data T where
